--- a/tests/cassettes/test_carrier_account_retrieve.yaml
+++ b/tests/cassettes/test_carrier_account_retrieve.yaml
@@ -23,24 +23,12 @@ interactions:
     uri: https://api.easypost.com/v2/carrier_accounts
   response:
     body:
-      string: '{"id": "ca_4a84accb78284dd68a914a10b7ea8016", "object": "CarrierAccount",
-        "type": "DhlEcsAccount", "clone": false, "created_at": "2022-08-15T18:51:36Z",
-        "updated_at": "2022-08-15T18:51:36Z", "description": "DHL eCommerce Solutions
+      string: '{"id": "ca_9b328bc471a54c00ae8995e7edde66df", "object": "CarrierAccount",
+        "type": "DhlEcsAccount", "clone": false, "created_at": "2023-05-12T21:18:18Z",
+        "updated_at": "2023-05-12T21:18:18Z", "description": "DHL eCommerce Solutions
         Account", "reference": null, "billing_type": "carrier", "readable": "DHL eCommerce
-        Solutions", "logo": null, "fields": {"credentials": {"client_id": {"visibility":
-        "visible", "label": "DHL eCommerce Solutions client ID", "value": "123456"},
-        "client_secret": {"visibility": "password", "label": "DHL eCommerce Solutions
-        client secret", "value": "********"}, "pickup_id": {"visibility": "visible",
-        "label": "DHL eCommerce Solutions pickup ID", "value": "123456"}, "distribution_center":
-        {"visibility": "visible", "label": "DHL eCommerce Solutions distribution center",
-        "value": "USLAX1"}}, "test_credentials": {"client_id": {"visibility": "visible",
-        "label": "Test DHL eCommerce Solutions client ID", "value": "123456"}, "client_secret":
-        {"visibility": "password", "label": "Test DHL eCommerce Solutions client secret",
-        "value": "********"}, "pickup_id": {"visibility": "visible", "label": "Test
-        DHL eCommerce Solutions pickup ID", "value": "123456"}, "distribution_center":
-        {"visibility": "visible", "label": "Test DHL eCommerce Solutions distribution
-        center", "value": "USLAX1"}}}, "credentials": "<REDACTED>", "test_credentials":
-        "<REDACTED>"}'
+        Solutions", "logo": null, "fields": [], "credentials": {}, "test_credentials":
+        {}}'
     headers:
       cache-control:
       - private, no-cache, no-store
@@ -49,7 +37,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"81b6f768ecbd059e9089a08fd16349b2"
+      - W/"33d79e2fa6cb5369bb7b6699277c3dd7"
       expires:
       - '0'
       pragma:
@@ -67,20 +55,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47e62fa95b8e79a76a800261f67
+      - 4eb6f00f645ead1ae2aabe7e000daa21
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb5nuq
+      - bigweb2nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb2nuq a29e4ad05c
+      - extlb1nuq 5ab12a3ed2
       x-runtime:
-      - '0.118282'
+      - '0.112895'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305121849-b449e9bf47-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -100,27 +88,15 @@ interactions:
       user-agent:
       - <REDACTED>
     method: GET
-    uri: https://api.easypost.com/v2/carrier_accounts/ca_4a84accb78284dd68a914a10b7ea8016
+    uri: https://api.easypost.com/v2/carrier_accounts/ca_9b328bc471a54c00ae8995e7edde66df
   response:
     body:
-      string: '{"id": "ca_4a84accb78284dd68a914a10b7ea8016", "object": "CarrierAccount",
-        "type": "DhlEcsAccount", "clone": false, "created_at": "2022-08-15T18:51:36Z",
-        "updated_at": "2022-08-15T18:51:36Z", "description": "DHL eCommerce Solutions
+      string: '{"id": "ca_9b328bc471a54c00ae8995e7edde66df", "object": "CarrierAccount",
+        "type": "DhlEcsAccount", "clone": false, "created_at": "2023-05-12T21:18:18Z",
+        "updated_at": "2023-05-12T21:18:18Z", "description": "DHL eCommerce Solutions
         Account", "reference": null, "billing_type": "carrier", "readable": "DHL eCommerce
-        Solutions", "logo": null, "fields": {"credentials": {"client_id": {"visibility":
-        "visible", "label": "DHL eCommerce Solutions client ID", "value": "123456"},
-        "client_secret": {"visibility": "password", "label": "DHL eCommerce Solutions
-        client secret", "value": "********"}, "pickup_id": {"visibility": "visible",
-        "label": "DHL eCommerce Solutions pickup ID", "value": "123456"}, "distribution_center":
-        {"visibility": "visible", "label": "DHL eCommerce Solutions distribution center",
-        "value": "USLAX1"}}, "test_credentials": {"client_id": {"visibility": "visible",
-        "label": "Test DHL eCommerce Solutions client ID", "value": "123456"}, "client_secret":
-        {"visibility": "password", "label": "Test DHL eCommerce Solutions client secret",
-        "value": "********"}, "pickup_id": {"visibility": "visible", "label": "Test
-        DHL eCommerce Solutions pickup ID", "value": "123456"}, "distribution_center":
-        {"visibility": "visible", "label": "Test DHL eCommerce Solutions distribution
-        center", "value": "USLAX1"}}}, "credentials": "<REDACTED>", "test_credentials":
-        "<REDACTED>"}'
+        Solutions", "logo": null, "fields": [], "credentials": {}, "test_credentials":
+        {}}'
     headers:
       cache-control:
       - private, no-cache, no-store
@@ -129,7 +105,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"81b6f768ecbd059e9089a08fd16349b2"
+      - W/"33d79e2fa6cb5369bb7b6699277c3dd7"
       expires:
       - '0'
       pragma:
@@ -147,20 +123,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47e62fa95b8e79a76a800261f79
+      - 4eb6f00f645ead1ae2aabe7e000daa57
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb8nuq
+      - bigweb1nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb2nuq a29e4ad05c
+      - extlb1nuq 5ab12a3ed2
       x-runtime:
-      - '0.038454'
+      - '0.026662'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305121849-b449e9bf47-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -182,7 +158,7 @@ interactions:
       user-agent:
       - <REDACTED>
     method: DELETE
-    uri: https://api.easypost.com/v2/carrier_accounts/ca_4a84accb78284dd68a914a10b7ea8016
+    uri: https://api.easypost.com/v2/carrier_accounts/ca_9b328bc471a54c00ae8995e7edde66df
   response:
     body:
       string: '{}'
@@ -212,20 +188,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47e62fa95b9e79a76a800261f86
+      - 4eb6f00f645ead1ae2aabe7e000daa60
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb2nuq
+      - bigweb1nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb1nuq a29e4ad05c
+      - extlb1nuq 5ab12a3ed2
       x-runtime:
-      - '0.123886'
+      - '0.116409'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305121849-b449e9bf47-master
       x-xss-protection:
       - 1; mode=block
     status:
