--- a/tests/cassettes/test_carrier_account_delete.yaml
+++ b/tests/cassettes/test_carrier_account_delete.yaml
@@ -23,24 +23,12 @@ interactions:
     uri: https://api.easypost.com/v2/carrier_accounts
   response:
     body:
-      string: '{"id": "ca_87bee3e0196c488099c4011ebf285501", "object": "CarrierAccount",
-        "type": "DhlEcsAccount", "clone": false, "created_at": "2022-08-15T18:51:38Z",
-        "updated_at": "2022-08-15T18:51:38Z", "description": "DHL eCommerce Solutions
+      string: '{"id": "ca_f7f311da4f2a4897ad9382aa86739831", "object": "CarrierAccount",
+        "type": "DhlEcsAccount", "clone": false, "created_at": "2023-05-12T21:18:19Z",
+        "updated_at": "2023-05-12T21:18:19Z", "description": "DHL eCommerce Solutions
         Account", "reference": null, "billing_type": "carrier", "readable": "DHL eCommerce
-        Solutions", "logo": null, "fields": {"credentials": {"client_id": {"visibility":
-        "visible", "label": "DHL eCommerce Solutions client ID", "value": "123456"},
-        "client_secret": {"visibility": "password", "label": "DHL eCommerce Solutions
-        client secret", "value": "********"}, "pickup_id": {"visibility": "visible",
-        "label": "DHL eCommerce Solutions pickup ID", "value": "123456"}, "distribution_center":
-        {"visibility": "visible", "label": "DHL eCommerce Solutions distribution center",
-        "value": "USLAX1"}}, "test_credentials": {"client_id": {"visibility": "visible",
-        "label": "Test DHL eCommerce Solutions client ID", "value": "123456"}, "client_secret":
-        {"visibility": "password", "label": "Test DHL eCommerce Solutions client secret",
-        "value": "********"}, "pickup_id": {"visibility": "visible", "label": "Test
-        DHL eCommerce Solutions pickup ID", "value": "123456"}, "distribution_center":
-        {"visibility": "visible", "label": "Test DHL eCommerce Solutions distribution
-        center", "value": "USLAX1"}}}, "credentials": "<REDACTED>", "test_credentials":
-        "<REDACTED>"}'
+        Solutions", "logo": null, "fields": [], "credentials": {}, "test_credentials":
+        {}}'
     headers:
       cache-control:
       - private, no-cache, no-store
@@ -49,7 +37,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"dcb1d22d17916f7a9713839dbfa1db1e"
+      - W/"eb766921687771864ea35189bbab2b46"
       expires:
       - '0'
       pragma:
@@ -67,20 +55,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47962fa95bae79a76ab0026201a
+      - 52975b53645ead1be2aabe81000e9bcb
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb4nuq
+      - bigweb9nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb2nuq a29e4ad05c
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.109726'
+      - '0.107265'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305121849-b449e9bf47-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -102,7 +90,7 @@ interactions:
       user-agent:
       - <REDACTED>
     method: DELETE
-    uri: https://api.easypost.com/v2/carrier_accounts/ca_87bee3e0196c488099c4011ebf285501
+    uri: https://api.easypost.com/v2/carrier_accounts/ca_f7f311da4f2a4897ad9382aa86739831
   response:
     body:
       string: '{}'
@@ -132,20 +120,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47962fa95bbe79a76ab00262031
+      - 52975b53645ead1be2aabe81000e9bf0
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb4nuq
+      - bigweb11nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb2nuq a29e4ad05c
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.116819'
+      - '0.192042'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305121849-b449e9bf47-master
       x-xss-protection:
       - 1; mode=block
     status:
