--- a/tests/cassettes/test_customs_info_retrieve.yaml
+++ b/tests/cassettes/test_customs_info_retrieve.yaml
@@ -24,14 +24,14 @@ interactions:
     uri: https://api.easypost.com/v2/customs_infos
   response:
     body:
-      string: '{"id": "cstinfo_99caa94c28504685b234e6fa1d699335", "object": "CustomsInfo",
-        "created_at": "2022-08-15T18:51:40Z", "updated_at": "2022-08-15T18:51:40Z",
+      string: '{"id": "cstinfo_174597bae5c04e9cba4d39caca585628", "object": "CustomsInfo",
+        "created_at": "2023-05-12T21:27:54Z", "updated_at": "2023-05-12T21:27:54Z",
         "contents_explanation": "", "contents_type": "merchandise", "customs_certify":
         true, "customs_signer": "Steve Brule", "eel_pfc": "NOEEI 30.37(a)", "non_delivery_option":
         "return", "restriction_comments": null, "restriction_type": "none", "mode":
-        "test", "declaration": null, "customs_items": [{"id": "cstitem_f4078a76d7e442c7b58b4337d960c3c8",
-        "object": "CustomsItem", "created_at": "2022-08-15T18:51:40Z", "updated_at":
-        "2022-08-15T18:51:40Z", "description": "Sweet shirts", "hs_tariff_number":
+        "test", "declaration": null, "customs_items": [{"id": "cstitem_bdd9c864a16740b2a67866098bc8c83d",
+        "object": "CustomsItem", "created_at": "2023-05-12T21:27:54Z", "updated_at":
+        "2023-05-12T21:27:54Z", "description": "Sweet shirts", "hs_tariff_number":
         "654321", "origin_country": "US", "quantity": 2, "value": "23.25", "weight":
         11.0, "code": null, "mode": "test", "manufacturer": null, "currency": null,
         "eccn": null, "printed_commodity_identifier": null}]}'
@@ -43,11 +43,11 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"7155785a5a6ea75752d1574f91ba37a5"
+      - W/"e27368c5f4c1925b9051a59082a32b9e"
       expires:
       - '0'
       location:
-      - /api/v2/customs_infos/cstinfo_99caa94c28504685b234e6fa1d699335
+      - /api/v2/customs_infos/cstinfo_174597bae5c04e9cba4d39caca585628
       pragma:
       - no-cache
       referrer-policy:
@@ -63,20 +63,21 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47e62fa95bce79a79bc0026209c
+      - cdb1f667645eaf59e2aac6bf00020c99
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb3nuq
+      - bigweb12nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb1nuq a29e4ad05c
+      - intlb2wdc a29e4ad05c
+      - extlb3wdc 5ab12a3ed2
       x-runtime:
-      - '0.031776'
+      - '0.037906'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305121849-b449e9bf47-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -96,17 +97,17 @@ interactions:
       user-agent:
       - <REDACTED>
     method: GET
-    uri: https://api.easypost.com/v2/customs_infos/cstinfo_99caa94c28504685b234e6fa1d699335
+    uri: https://api.easypost.com/v2/customs_infos/cstinfo_174597bae5c04e9cba4d39caca585628
   response:
     body:
-      string: '{"id": "cstinfo_99caa94c28504685b234e6fa1d699335", "object": "CustomsInfo",
-        "created_at": "2022-08-15T18:51:40Z", "updated_at": "2022-08-15T18:51:40Z",
+      string: '{"id": "cstinfo_174597bae5c04e9cba4d39caca585628", "object": "CustomsInfo",
+        "created_at": "2023-05-12T21:27:54Z", "updated_at": "2023-05-12T21:27:54Z",
         "contents_explanation": "", "contents_type": "merchandise", "customs_certify":
         true, "customs_signer": "Steve Brule", "eel_pfc": "NOEEI 30.37(a)", "non_delivery_option":
         "return", "restriction_comments": null, "restriction_type": "none", "mode":
-        "test", "declaration": null, "customs_items": [{"id": "cstitem_f4078a76d7e442c7b58b4337d960c3c8",
-        "object": "CustomsItem", "created_at": "2022-08-15T18:51:40Z", "updated_at":
-        "2022-08-15T18:51:40Z", "description": "Sweet shirts", "hs_tariff_number":
+        "test", "declaration": null, "customs_items": [{"id": "cstitem_bdd9c864a16740b2a67866098bc8c83d",
+        "object": "CustomsItem", "created_at": "2023-05-12T21:27:54Z", "updated_at":
+        "2023-05-12T21:27:54Z", "description": "Sweet shirts", "hs_tariff_number":
         "654321", "origin_country": "US", "quantity": 2, "value": "23.25", "weight":
         11.0, "code": null, "mode": "test", "manufacturer": null, "currency": null,
         "eccn": null, "printed_commodity_identifier": null}]}'
@@ -118,7 +119,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"7155785a5a6ea75752d1574f91ba37a5"
+      - W/"e27368c5f4c1925b9051a59082a32b9e"
       expires:
       - '0'
       pragma:
@@ -136,20 +137,21 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47e62fa95bce79a79bc002620aa
+      - cdb1f667645eaf5ae2aac6bf00020ca7
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb3nuq
+      - bigweb9nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb2nuq a29e4ad05c
+      - intlb2wdc a29e4ad05c
+      - extlb3wdc 5ab12a3ed2
       x-runtime:
-      - '0.021706'
+      - '0.076913'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305122104-29dd2d738a-master
       x-xss-protection:
       - 1; mode=block
     status:
